syntax = "proto3";

option optimize_for = SPEED;
option java_package = "pers.enoch.im.common.protobuf";

message AuthRequest{
  // 用户id
  string uid = 1;
  // token
  string token = 2;
  // 时间戳
  int64 timestamp = 3;
}

message AuthResponse{
  // 状态枚举
  enum Status{
    OK = 0;
    ERR = 1;
  }
  // 状态（使用枚举）
  int32 status = 1;
  // 错误码（统一）
  int32 err_code = 2;
  // 错误描述
  string err_msg = 3;
}