syntax = "proto3";

option optimize_for = SPEED;
option java_package = "pers.enoch.im.common.protobuf";

message LogoutRequest{
  // 用户id
  string uid = 1;
  // 用户token
  string token = 2;
  // 发包时间戳
  int64 timestamp = 3;
}

// 登出没有回执包
message LogoutResponse{

}